# rpicar

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  main.cc  package.xml
camera/: CMakeLists.txt  camera.h  rpi_camera.cc  rpi_camera.h  transcoder.cc  transcoder.h  v4l2_camera.cc  v4l2_camera.h
cmake/: FindCamera.cmake  FindYUV.cmake  Findcamera.cmake  Findffmpeg.cmake
msg/: CameraImageFrame.msg
nodes/: CMakeLists.txt  camera_node.cc  camera_node.h  camera_node_config.h  rpi_camera_node.cc  rpi_camera_node.h
utils/: CMakeLists.txt  assert.h  compat.h  error_utils.cc  error_utils.h  logging.h
